# telco_dwh_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/exacaster_task/: config_settings.py  main.py
src/exacaster_task/common/: sql_queries.py  utils.py
src/exacaster_task/core/: database.py  logger.py
src/exacaster_task/pipelines/: telco_billings_pipeline.py
